--- a/templates/albums/album_list.html
+++ b/templates/albums/album_list.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello!</p>
+<header>
+    <h1><a href="/">Stephen's Albums</a></h1>
+</header>
+
+{% for album in albums %}
+    <album>
+        <time>created: {{ album.created_at }}</time>
+        <h2><a href="">{{ album.title }}</a></h2>
+        <h3><a href="">{{ album.artist }}</a></h3>
+    </album>
+{% endfor %}
 </body>
 </html>
